--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
             <a href="#">Home</a>
             <a href="#about-us">About</a>
             <a href="#why-us">Why Us</a>
-            <a href="work.html">Our Work</a>
-            <a href="games.html">Games</a>
-            <a href="careers.html">Careers</a>
+            <a href="#work">Our Work</a>
+            <a href="#games">Games</a>
+            <a href="#careers">Careers</a>
             <a href="#creativity">Creativity</a>
             <a href="#community">Community</a>
             <a href="#help">Help</a>
@@ -206,6 +206,24 @@
         <p>At The Mythicz, we offer a unique blend of ancient mythological narratives and cutting-edge interactive experiences. Our team is dedicated to reimagining India's rich mythological heritage, transforming timeless stories into immersive worlds that resonate with today's audiences. With a deep respect for tradition and a passion for innovation, we create unforgettable adventures where players can explore moral dilemmas, embody legendary heroes, and experience epic quests.</p>
         <p>We don’t just tell stories; we bring them to life in ways that spark creativity, foster community, and invite you to experience the profound lessons embedded in these ancient myths. Whether you’re a gamer, a creator, or simply a mythology enthusiast, our vision is to create a space where everyone can connect, learn, and embark on legendary journeys.</p>
         <p>Join us in shaping the future of interactive mythology. Experience the power of legends, connect with like-minded individuals, and be a part of a movement that celebrates the richness of India's mythological past while embracing the possibilities of the future.</p>
+    </section>
+    
+    <section id="work">
+        <h2>Work</h2>
+        <p>Discover more about the impactful work we do and the mission that drives us to make a difference. Explore how our initiatives align with our commitment to creating meaningful change in the communities we serve. Our work is driven by a passion for storytelling, a commitment to excellence, and a dedication to creating immersive experiences that inspire, educate, and entertain. Through our projects, we aim to bring the magic of Indian mythology to a global audience, fostering a deeper appreciation for the cultural heritage and spiritual wisdom of the ancient world. From interactive games to educational resources, we strive to create content that resonates with diverse audiences, transcends boundaries, and sparks curiosity and creativity in all who engage with it. Join us on our journey to explore the myths of India and unlock the power of storytelling to transform lives and inspire change. Are you ready to embark on an epic adventure? Explore our projects and discover the magic of Indian mythology.</p>
+        <a href="work.html" class="button-link">Learn more</a> 
+    </section>
+
+    <section id="games">
+        <h2>Games</h2>
+        <p>Explore our collection of games inspired by the myths of India. Each game offers a unique blend of storytelling, gameplay, and artistry, inviting players to embark on epic adventures, face divine challenges, and uncover the mysteries of the ancient world. From action-packed battles to intricate puzzles, our games are designed to captivate, challenge, and inspire players of all ages. Whether you're a seasoned gamer or new to the world of interactive entertainment, our diverse portfolio has something for everyone. Immerse yourself in the myths of India, discover the power of storytelling, and experience the magic of gaming like never before. Join us on a journey through the realms of gods and demons, heroes and villains, and unlock the secrets of India's mythological past. Are you ready to unleash the legends? Explore our collection of games and embark on an epic adventure through the myths of India.</p>
+        <a href="games.html" class="button-link">Explore our projects</a> 
+    </section>
+
+    <section id="careers">
+        <h2>Careers</h2>
+        <p>Collabrate with us to create an immersive experience. At The Mythicz, we're always looking for talented individuals to join our team. Whether you're an artist, a writer, a developer, or simply a mythology enthusiast, we invite you to explore our career opportunities and be a part of our mission to bring the magic of Indian mythology to the world. Join us in shaping the future of interactive storytelling, creating unforgettable experiences, and connecting with a global community of mythic enthusiasts. Together, we can unlock the power of legends, inspire creativity, and embark on epic adventures that transcend time and space. Are you ready to unleash the legends? Explore our career opportunities and join us on a journey through the myths of India.</p>
+        <a href="careers.html" class="button-link">Join Us</a> 
     </section>
 
     <section id="creativity">
