--- a/index.html
+++ b/index.html
@@ -1,174 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Mythicz</title>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600&display=swap" rel="stylesheet">
+    <title>Amuktha Goteti - Portfolio</title>
     <style>
-        /* General Reset and Styles */
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+
         body {
             margin: 0;
-            font-family: 'Rajdhani', sans-serif;
-            background: linear-gradient(to bottom, #1e2022, #111);
-            color: #fff;
+            font-family: 'Poppins', sans-serif;
+            background-color: #0d1117;
+            color: #c9d1d9;
+            line-height: 1.6;
             overflow-x: hidden;
         }
 
         header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 3rem;
-            background-color: rgba(0, 0, 0, 0.8);
-            position: fixed;
-            width: 100%;
-            z-index: 1000;
-            top: 0;
-            box-sizing: border-box;
-        }
-
-        header .logo {
-            font-size: 1.5rem;
-            font-weight: 600;
-            color: #ffc107;
-            text-transform: uppercase;
-        }
-
-        header nav {
-            display: flex;
-            gap: 1.5rem;
-        }
-
-        header nav a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 1rem;
-            transition: color 0.3s;
-        }
-
-        header nav a:hover {
-            color: #ffc107;
-        }
-
-        .hero {
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
             text-align: center;
-            background: url('mythic-bg.jpg') no-repeat center center/cover;
+            padding: 120px 20px;
+            background: linear-gradient(135deg, #161b22, #0d1117);
+            position: relative;
+            overflow: hidden;
         }
 
-        .hero h1 {
-            font-size: 4rem;
-            margin: 0;
+        header::before, header::after {
+            content: '';
+            position: absolute;
+            width: 300px;
+            height: 300px;
+            background: radial-gradient(circle, rgba(88,166,255,0.2), transparent);
+            border-radius: 50%;
+            z-index: 1;
         }
 
-        .hero p {
-            font-size: 1.5rem;
-            margin: 1rem 0 2rem;
+        header::before {
+            top: -50px;
+            left: -50px;
         }
 
-        .hero .button-link {
-            background-color: #ffc107;
-            color: #000;
-            padding: 0.8rem 1.5rem;
-            border-radius: 5px;
+        header::after {
+            bottom: -50px;
+            right: -50px;
+            background: radial-gradient(circle, rgba(255,126,255,0.2), transparent);
+        }
+
+        header h1 {
+            font-size: 3.5rem;
+            color: #58a6ff;
+            margin-bottom: 10px;
+            position: relative;
+            z-index: 2;
+        }
+
+        header span {
+            color: #ff7eff;
+        }
+
+        header p {
+            font-size: 1.2rem;
+            margin-top: 10px;
+            color: #8b949e;
+            position: relative;
+            z-index: 2;
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        nav a {
             text-decoration: none;
-            font-size: 1rem;
-            transition: background 0.3s;
+            color: #58a6ff;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: 2px solid #58a6ff;
+            border-radius: 5px;
+            transition: background 0.3s, color 0.3s;
         }
 
-        .hero .button-link:hover {
-            background-color: #e6a700;
+        nav a:hover {
+            background: #58a6ff;
+            color: #0d1117;
         }
 
         section {
-            padding: 4rem 2rem;
-            text-align: center;
+            padding: 80px 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+            position: relative;
         }
 
-        h2 {
+        section h2 {
+            text-align: center;
             font-size: 2.5rem;
-            margin-bottom: 1rem;
-            color: #ffc107;
+            color: #58a6ff;
+            margin-bottom: 60px;
         }
 
         .grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
         }
 
         .card {
-            background: #1e2022;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background-color: #161b22;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
         }
 
         .card h3 {
-            font-size: 1.5rem;
-            color: #ffc107;
-            margin-bottom: 1rem;
+            color: #79c0ff;
+            margin-bottom: 10px;
         }
 
         .card p {
-            font-size: 1rem;
-            color: #ddd;
+            margin-bottom: 10px;
+        }
+
+        .timeline {
+            position: relative;
+            margin: 0 auto;
+            padding: 20px 0;
+            max-width: 800px;
+        }
+
+        .timeline::before {
+            content: '';
+            position: absolute;
+            left: 50%;
+            top: 0;
+            width: 4px;
+            height: 100%;
+            background: #58a6ff;
+            transform: translateX(-50%);
+        }
+
+        .timeline-event {
+            position: relative;
+            margin: 20px 0;
+            padding: 10px 20px;
+            background: #161b22;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .timeline-event.left {
+            margin-right: 50%;
+            text-align: right;
+        }
+
+        .timeline-event.right {
+            margin-left: 50%;
+        }
+
+        .timeline-event::before {
+            content: '';
+            position: absolute;
+            top: 20px;
+            width: 15px;
+            height: 15px;
+            background: #58a6ff;
+            border-radius: 50%;
+            border: 3px solid #0d1117;
+            box-shadow: 0 0 0 4px rgba(88, 166, 255, 0.5);
+        }
+
+        .timeline-event.left::before {
+            right: -10px;
+        }
+
+        .timeline-event.right::before {
+            left: -10px;
         }
 
         footer {
-            padding: 2rem;
             text-align: center;
-            background: #000;
-            color: #fff;
-            font-size: 0.9rem;
+            padding: 40px 20px;
+            background-color: #161b22;
+            color: #8b949e;
         }
 
         footer a {
-            color: #ffc107;
+            color: #58a6ff;
             text-decoration: none;
+            font-weight: bold;
         }
 
         footer a:hover {
             text-decoration: underline;
         }
 
-        .button-link {
-            display: inline-block;
-            margin-top: 1rem;
-            background-color: #ffc107;
-            color: #000;
-            padding: 0.8rem 1.5rem;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 1rem;
-            font-weight: bold;
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2.5rem;
+            }
+
+            .timeline-event.left,
+            .timeline-event.right {
+                margin: 0;
+                text-align: center;
+            }
+
+            .timeline-event::before {
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            .timeline::before {
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            nav {
+                flex-direction: column;
+                gap: 10px;
+            }
+
+            section {
+                padding: 40px 10px;
+            }
+        }
+
+        #about-me {
             text-align: center;
-            transition: background 0.3s, transform 0.2s;
+            padding: 80px 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
-        .button-link:hover {
-            background-color: #e6a700;
-            transform: scale(1.05);
+        #about-me h2 {
+            font-size: 2.5rem;
+            color: #58a6ff;
+            margin-bottom: 20px;
         }
 
-
-        /* Contact Links */
-        .contact a {
-            color: #ffc107;
-            font-size: 1.1rem;
-            margin: 0.5rem;
-            text-decoration: none;
-            display: inline-block;
+        #about-me p {
+            font-size: 1.2rem;
+            color: #8b949e;
+            margin-bottom: 20px;
+            max-width: 800px;
         }
     </style>
 </head>
-
 <body>
     <header>
         <div class="logo">The Mythicz</div>
@@ -327,5 +416,5 @@
         <p>&copy; 2024 The Mythicz. All Rights Reserved.</p>
     </footer>
 </body>
-
 </html>
+
