--- a/help.html
+++ b/help.html
@@ -201,6 +201,7 @@
         <p>If you're looking for immediate updates, news, or to interact with other members of the Mythicz community, follow us on our social media platforms.</p>
         <a href="https://www.instagram.com/the.myticz/" target="_blank" class="button-link">Instagram</a>
         <a href="https://twitter.com/TheMyticz" target="_blank" class="button-link">Twitter</a>
+        <a href="https://www.linkedin.com/company/themythicz/?viewAsMember=true" target="_blank">LinkedIn</a>
     
         <h3>Feedback</h3>
         <p>Your feedback is invaluable to us! If you have suggestions, ideas, or comments about how we can improve, please don’t hesitate to share them. We appreciate your contribution to making The Mythicz better!</p>
