--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <a href="#careers">Careers</a>
             <a href="#creativity">Creativity</a>
             <a href="#community">Community</a>
-            <a href="#help">Help</a>
+            <a href="help.html">Help</a>
             <a href="#quotes">Quotes</a>
             <a href="#contact">Contact</a>
         </nav>
