--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <div class="contact">
             <a href="https://www.instagram.com/the.myticz/" target="_blank" aria-label="Visit our Instagram">Instagram</a>
             <a href="https://twitter.com/TheMyticz" target="_blank" aria-label="Visit our Twitter">Twitter</a>
-            <a href="https://www.linkedin.com/company/themythicz/?viewAsMember=true" target="_blank" aria-label="Visit Our LinkedIn Page">LinkedIn</a>
+            <a href="https://www.linkedin.com/company/themythicz/" target="_blank" aria-label="Visit Our LinkedIn Page">LinkedIn</a>
             <a href="mailto:themythicz@gmail.com" aria-label="Send us an email">Email Us</a>
         </div>
     </section>
