--- a/careers.html
+++ b/careers.html
@@ -195,7 +195,7 @@
     <footer>
         <a href="https://www.instagram.com/the.myticz/" target="_blank">Instagram</a>
         <a href="https://twitter.com/TheMyticz" target="_blank">Twitter</a>
-        <a href="https://www.linkedin.com/company/themythicz/?viewAsMember=true" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/company/themythicz/" target="_blank">LinkedIn</a>
         <a href="mailto:themythicz@gmail.com">Email Us</a>
     </footer>
 </body>
