--- a/concept-artist.html
+++ b/concept-artist.html
@@ -226,7 +226,7 @@
         <a href="https://www.instagram.com/the.myticz/" target="_blank">Instagram</a>
         <a href="https://twitter.com/TheMyticz" target="_blank">Twitter</a>
         <a href="mailto: themythicz@gmail.com" target="_blank">email us</a>
-        <a href="https://www.linkedin.com/company/themythicz/?viewAsMember=true" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/company/themythicz/" target="_blank">LinkedIn</a>
     </footer>
 </body>
 </html>
