web-developer.html

--- a/web-developer.html
+++ b/web-developer.html
@@ -226,7 +226,7 @@
     <footer>
         <a href="https://www.instagram.com/the.myticz/" target="_blank">Instagram</a>
         <a href="https://twitter.com/TheMyticz" target="_blank">Twitter</a>
-        <a href="https://www.linkedin.com/company/themythicz/?viewAsMember=true" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/company/themythicz/" target="_blank">LinkedIn</a>
         <a href="mailto: themythicz@gmail.com" target="_blank">email us</a>
     </footer>
 </body>
