concept-artist.html

--- a/concept-artist.html
+++ b/concept-artist.html
@@ -179,7 +179,7 @@
         <div class="job-header">
             <h1>Concept Artists</h1>
             <p>Hyderabad, Telangana, India</p>
-            <a href="mailto: themythicz@gmail.com" class="apply-button">Apply</a>
+            <a href="Apply-Concept Artists.html" class="apply-button">Apply</a>
         </div>
         <div class="content">
             <h2>Minimum Qualifications:</h2>
