--- a/Apply-Concept Artists.html
+++ b/Apply-Concept Artists.html
@@ -176,7 +176,7 @@
             <p>Showcase your creativity and be part of our dynamic team.</p>
         </div>
 
-        <form action="/submit-application" method="post" enctype="multipart/form-data">
+        <form action="/api/submit-application" method="post" enctype="multipart/form-data">
             <label for="name">Full Name</label>
             <input type="text" id="name" name="name" placeholder="Enter your full name" required>
 
@@ -200,7 +200,7 @@
             <label for="message">Tell us why you want to join</label>
             <textarea id="message" name="message" rows="5" placeholder="Share your passion and motivation" required></textarea>
 
-            <a class="apply-button" href="#" onclick="document.querySelector('form').submit();">Submit Application</a>
+            <button type="submit" class="apply-button">Submit Application</button>
         </form>
     </div>
 
