concept-artist.html

--- a/concept-artist.html
+++ b/concept-artist.html
@@ -179,7 +179,7 @@
         <div class="job-header">
             <h1>Concept Artists</h1>
             <p>Hyderabad, Telangana, India</p>
-            <a href="Apply-Concept Artists.html" class="apply-button">Apply</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeQU1FdnoqjR_U9vMjwRPDJSRH2uA22haIANq7N3FTLYsqLfA/viewform?usp=header" class="apply-button">Apply</a>
         </div>
         <div class="content">
             <h2>Minimum Qualifications:</h2>
