concept-artist.html

--- a/concept-artist.html
+++ b/concept-artist.html
@@ -137,6 +137,7 @@
         footer a {
             color: #ffc107;
             text-decoration: none;
+            margin-right: 1rem;
         }
 
         footer a:hover {
@@ -166,7 +167,7 @@
         <div class="logo">Careers</div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about us.html">About</a>
+            <a href="about-us.html">About</a>
             <a href="work.html">Our Work</a>
             <a href="games.html">Games</a>
             <a href="careers.html">Careers</a>
@@ -220,7 +221,7 @@
                 <li>Provide creative solutions to visual challenges, ensuring designs are functional, appealing, and fit the gameplay mechanics.</li>
             </ul>
         </div>
-    </div> 
+    </div>
 
     <footer>
         <a href="https://www.instagram.com/the.myticz/" target="_blank">Instagram</a>
