--- a/mythology-research.html
+++ b/mythology-research.html
@@ -179,7 +179,7 @@
         <div class="job-header">
             <h1>Mythology Researcher</h1>
             <p>Hyderabad, Telangana, India</p>
-            <a href="mailto: themythicz@gmail.com" class="apply-button">Apply</a>
+            <a href="https://forms.gle/48toMYWdwApdL94r5" class="apply-button">Apply</a>
         </div>
         <div class="content">
             <h2>Minimum Qualifications:</h2>
