storyboard-artist.html

--- a/storyboard-artist.html
+++ b/storyboard-artist.html
@@ -179,7 +179,7 @@
         <div class="job-header">
             <h1>Storyboard Artist</h1>
             <p>Hyderabad, Telangana, India</p>
-            <a href="mailto: themythicz@gmail.com" class="apply-button">Apply</a>
+            <a href="https://forms.gle/MyBaNG2sGCXKZyZr9" class="apply-button">Apply</a>
         </div>
         <div class="content">
             <h2>Minimum Qualifications:</h2>
