--- a/concept-artist.html
+++ b/concept-artist.html
@@ -180,7 +180,7 @@
         <div class="job-header">
             <h1>Concept Artists</h1>
             <p>Hyderabad, Telangana, India</p>
-            <a href="https://forms.gle/LLZBJ9BY1N6RQPf1A" class="apply-button">Apply</a>
+            <a href="https://forms.gle/hYYaumZ3Qc2JnkTL8" class="apply-button">Apply</a>
         </div>
         <div class="content">
             <h2>Minimum Qualifications:</h2>
