concept-artist.html

--- a/concept-artist.html
+++ b/concept-artist.html
@@ -137,7 +137,6 @@
         footer a {
             color: #ffc107;
             text-decoration: none;
-            margin-right: 1rem;
         }
 
         footer a:hover {
@@ -167,7 +166,7 @@
         <div class="logo">Careers</div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about-us.html">About</a>
+            <a href="about us.html">About</a>
             <a href="work.html">Our Work</a>
             <a href="games.html">Games</a>
             <a href="careers.html">Careers</a>
@@ -178,56 +177,48 @@
 
     <div class="container">
         <div class="job-header">
-            <h1>Concept Artists</h1>
+            <h1>Narrative Designers</h1>
             <p>Hyderabad, Telangana, India</p>
-            <a href="https://forms.gle/ogTE4LZagTJL2LBP7" class="apply-button">Apply</a>
+            <a href="https://forms.gle/TKVFAMknhURcBTmc7" class="apply-button">Apply</a>
         </div>
         <div class="content">
             <h2>Minimum Qualifications:</h2>
             <ul>
-                <li>Bachelor's degree in fine arts, illustration, animation, graphic design, or a related field.</li>
-                <li>A well-organized portfolio showcasing a variety of skills such as character design, environment design, props, and creatures.</li>
-                <li>Proficiency in Art Software (Adobe Photoshop, Corel Painter, SketchUp, ZBrush, Blender or Autodesk Maya)</li>
-                <li>Knowledge of traditional drawing and painting techniques can be a plus for concept art.</li>
-                <li>Knowledge of color theory, lighting, perspective, and composition to create compelling visuals.</li>
-                <li>Understanding how to design environments that are visually engaging and serve the gameplay or narrative.</li>
-                <li>Experience in game development, illustration, or other design work can be important (including internship experience).</li>
-                <li>The ability to present and explain designs to team members and stakeholders clearly.</li>
-                <li>Meeting deadlines and working efficiently under pressure is essential in the gaming industry.</li>
+                <li>Proven experience in creative writing, storytelling, or scriptwriting, preferably for games or interactive media.</li>
+                <li>Ability to craft compelling characters, dialogue, and story arcs tailored to gameplay.</li>
+                <li>Excellent teamwork skills to work effectively with designers, artists, and developers.</li>
+                <li>Familiarity with game mechanics and how narrative integrates into gameplay.</li>
+                <li>Experience with narrative design tools (e.g., Twine, Ink, or similar) and game engines like Unity or Unreal.</li>
+                <li>Ability to write for diverse tones, genres, and audiences.</li>
+                <li>Strong written and verbal communication skills.</li>
+                <li>A robust portfolio showcasing relevant narrative work.</li>
             </ul>
             <h2>Preferred Qualifications:</h2>
             <ul>
                 <li>Master's Degree in Animation, Fine Arts, Graphic Design, Illustration, or related fields.</li>
-                <li>Skills in traditional mediums like pencil, ink, or paint.</li>
-                <li>Ability to create storyboards or visual sequences.</li>
-                <li>Sensitivity to diverse cultures for creating inclusive and globally appealing designs.</li>
             </ul>
             <h2>Responsibilities:</h2>
             <ul>
-                <li>Translate game ideas and narrative descriptions into compelling visual concepts.
-                    Collaborate with game designers and writers to bring characters, environments, and objects to life.</li>
-                <li>Develop high-quality sketches, illustrations, and digital paintings to define the look and feel of the game.
-                    Produce artwork for characters, creatures, environments, props, and vehicles.</li>
-                <li>Work closely with 3D modelers, animators, and level designers to ensure the art style is consistent and achievable.
-                    Coordinate with art directors to align designs with the game’s vision and style guide.</li>
-                <li>Research historical, cultural, and thematic references to inform designs.
-                    Stay updated on trends in gaming and art to ensure innovative and fresh concepts.</li>
-                <li>Revise and refine artwork based on feedback from directors, stakeholders, and the development team.
-                    Quickly prototype multiple ideas and adapt them to the evolving needs of the project.</li>
-                <li>Contribute to the creation of immersive worlds by designing mood boards, color palettes, and atmospheric elements.
-                    Help establish the overall visual identity of the game.</li>
-                <li>Maintain detailed documentation of designs to guide the production team during development.
-                    Create art assets for promotional materials if needed.</li>
-                <li>Provide creative solutions to visual challenges, ensuring designs are functional, appealing, and fit the gameplay mechanics.</li>
+                <li>Create and refine the overarching narrative, including plotlines, themes, and character arcs.</li>
+                <li>Develop compelling characters with unique backstories, personalities, and motivations.</li>
+                <li>Craft engaging and authentic dialogue for characters, NPCs, and in-game interactions.</li>
+                <li>Design the lore, history, and rules of the game world to create an immersive experience.</li>
+                <li>Collaborate with game designers and storyboard artists to ensure the story aligns seamlessly with gameplay mechanics and objectives</li>
+                <li>Write scripts for cutscenes, in-game events, and cinematics.</li>
+                <li>Develop branching storylines and consequences for player decisions.</li>
+                <li>Oversee the implementation of story elements, including voiceover scripts, environmental storytelling, and text descriptions.</li>
+                <li>Work closely with artists, level designers, and voice actors to bring the narrative to life.</li>
+                <li>Ensure consistency in tone, style, and lore across all narrative elements.</li>
+                <li>Focus on creating emotionally resonant and memorable storytelling moments that enhance player immersion.</li>
+                <li>Maintain detailed narrative bibles and documentation for reference by the entire development team.</li>
             </ul>
         </div>
-    </div>
+    </div> 
 
     <footer>
         <a href="https://www.instagram.com/the.myticz/" target="_blank">Instagram</a>
         <a href="https://twitter.com/TheMyticz" target="_blank">Twitter</a>
         <a href="mailto: themythicz@gmail.com" target="_blank">email us</a>
-        <a href="https://www.linkedin.com/company/themythicz/" target="_blank">LinkedIn</a>
     </footer>
 </body>
 </html>
