--- a/careers.html
+++ b/careers.html
@@ -180,8 +180,8 @@
                 <a href="storyboard-artist.html" class="button-link">Learn More</a>
             </div>
             <div class="card">
-                <h3>Concept Artist</h3>
-                <p>Help us visualize creative ideas and maintain cultural richness in our work.</p>
+                <h3>Narrative Designers</h3>
+                <p>Join us as a Narrative Designer to craft worlds, weave stories, and bring characters to life with immersive lore, engaging dialogue, and unforgettable tales!</p>
                 <a href="concept-artist.html" class="button-link">Learn More</a>
             </div>
             <div class="card">
