--- a/work.html
+++ b/work.html
@@ -188,7 +188,7 @@
             <div class="card">
                 <h3>Collaborations</h3>
                 <p>Partnering with artists, writers, and developers to create meaningful and impactful experiences.</p>
-                <a href="#community" class="button-link">Get Involved</a>
+                <a href="creativity.html" class="button-link">Get Involved</a>
             </div>
             <div class="card">
                 <h3>Community Stories</h3>
