--- a/work.html
+++ b/work.html
@@ -193,7 +193,7 @@
             <div class="card">
                 <h3>Community Stories</h3>
                 <p>Highlighting stories, art, and ideas from our amazing community that inspire and shape our creations.</p>
-                <a href="#community" class="button-link">Get Involved</a>
+                <a href="https://discord.gg/FSpw6zH6Ns" class="button-link">Get Involved</a>
             </div>
         </div>
     </section>
