--- a/creativity.html
+++ b/creativity.html
@@ -218,7 +218,7 @@
             <div class="card">
                 <h3>Discord</h3>
                 <p>Join our Discord server to chat with fellow players, share your experiences, and participate in community events.</p>
-                <a href="https://discord.gg/YA296Wte" class="button-link">Join Us on Discord</a>
+                <a href="https://discord.gg/FSpw6zH6Ns" class="button-link">Join Us on Discord</a>
             </div>
             <div class="card">
                 <h3>Share Your Journey</h3>
