--- a/work.html
+++ b/work.html
@@ -183,7 +183,7 @@
             <div class="card">
                 <h3>Projects we are working on</h3>
                 <p>Action-adventure games that reimagines Indian mythology with stunning graphics and engaging gameplay.</p>
-                <a href="games.html" class="button-link">Get a sneek peek of our projects</a>
+                <a href="games.html" class="button-link">Get a sneak peek of our projects</a>
             </div>
             <div class="card">
                 <h3>Collaborations</h3>
