--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </header>
 
     <section class="hero">
-        <h1>Unleash the Legends</h1>
+        <h1>Unleash the Indian Mythology</h1>
         <p>Embark on an epic journey through the myths of India. Discover heroes, gods, and stories reimagined.</p>
         <a href="#about-us" class="button-link">Explore Now</a>
     </section>
