--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@
             <a href="mailto:themythicz@gmail.com" aria-label="Send us an email">Email Us</a>
         </div>
     </section>
+    <footer>
+        <p><a href="https://www.notion.so/Terms-and-Privacy-15aad712ff1d815cb023e15b716b9f3c?pvs=4">Terms and Privacy</a></p>
+    </footer>
 </body>
 
 </html>
