--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
             <a href="#creativity">Creativity</a>
             <a href="#community">Community</a>
             <a href="help.html">Help</a>
+            <a href="#careers">Careers</a>
             <a href="#quotes">Quotes</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -241,7 +242,13 @@
                 <a href="mailto:themythicz@gmail.com" class="button-link">Email Us</a>
             </div>
         </div>
-    </section>   
+    </section>
+
+    <section id="careers">
+        <h2>Join Our Team</h2>
+        <p>Become a part of our dynamic team and help us create something extraordinary!</p>
+        <a href="careers.html" class="button-link" aria-label="Explore roles to join our team">Explore Roles to Join Our Team</a>
+    </section>
 
     <section id="quotes">
         <h2>Words of Wisdom</h2>
